# fast-nuclear-sim

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  README.md  input.yaml  nasty_function.c++
assets/: scene-baked.glb  scene.blend  scene.fbx  scene.glb  test.fbx  test.glb  test.gltf
assets/model/: monitor_graphics.fbx  monitor_graphics.glb  monitor_graphics.stl  monitor_turbine.stl  primary_coolant_pump_switch.glb  primary_coolant_pump_switch.stl  pump_switch_1.fbx  pump_switch_1.glb  pump_switch_2.fbx  pump_switch_2.glb  pump_switch_3.fbx  pump_switch_3.glb  pump_switch_click_1.stl  pump_switch_click_2.stl  pump_switch_click_3.stl  reactor_core_button1.stl  reactor_core_button2.stl  reactor_core_button3.stl  reactor_core_button4.stl  reactor_core_button5.stl  reactor_core_button6.stl  reactor_core_button7.stl  reactor_core_button8.stl  reactor_core_button9.stl  reactor_core_input.stl  reactor_core_interface_cell.scad  reactor_core_interface_cell.stl  reactor_core_interface_circle.scad  reactor_core_interface_circle.stl  reactor_core_joystick.stl  reactor_core_scram.stl  resistor_bank_switch.fbx  resistor_bank_switch.glb  resistor_bank_switch_click.stl  scene_collisions.stl  secondary_coolant_pump_switch.glb  secondary_coolant_pump_switch.stl  synchroscope_dial.fbx  synchroscope_dial.glb  synchroscope_dial.stl  (+11 more)
assets/shader/: blur.fsh  blur.vsh  light.fsh  light.gsh  light.vsh  main.fsh  main.vsh  post_base.vsh
assets/unbaked/: scene.blend
src/: display.cpp  display.hpp  fuel_rod.cpp  fuel_rod.hpp  half_life.hpp  main.cpp  main.cpp.old  parts.cpp  parts.hpp  reactor.cpp  reactor.hpp  rod.cpp  rod.hpp  sample.cpp  sample.hpp  system.cpp  system.hpp  tests.cpp  tests.hpp  waste.cpp  waste.hpp
(+211 files in other folders)
